--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4864,11 +4864,11 @@
         <div class="flex flex-col space-y-2 mt-2 mr-2 ml-auto w-fit">
             <label class="flex items-center space-x-2">
                 <input type="radio" v-model="textNumberMatchMode" value="enabled" class="scale-150">
-                <span class="px-2 font-bold">تفعيل المطابقة النصية الرقمية</span>
+                <span class="px-2 font-bold">تفعيل</span>
             </label>
             <label class="flex items-center space-x-2">
                 <input type="radio" v-model="textNumberMatchMode" value="disabled" class="scale-150">
-                <span class="px-2 font-bold">تعطيل المطابقة النصية الرقمية</span>
+                <span class="px-2 font-bold">تعطيل</span>
             </label>
         </div>
     </div>
