--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -726,7 +726,7 @@
                 <fieldset class="border border-gray-300 rounded p-4 w-1/2">
                     <legend class="px-2 font-bold text-white-600">{{ episodeTypeLegend }}
                         <button 
-                            class="bg-orange-500 text-white font-bold py-2 px-1 rounded hover:bg-orange-800 transition" 
+                            class="bg-orange-500 text-white font-bold py-2 px-1 rounded hover:bg-orange-800 transition text-sm" 
                             @click="openEmptyPopup">
                             المزيد
                         </button>
@@ -4899,7 +4899,7 @@
                 </div>
               
                 <!-- Centered Checkboxes -->
-                <div class="flex flex-wrap gap-1 mt-2 justify-center text-lg">
+                <div class="flex flex-wrap gap-1 mt-2 justify-center text-sm">
                   <label class="flex items-center space-x-2">
                     <input
                       type="checkbox"
