--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4900,7 +4900,7 @@
               
                 <!-- Centered Checkboxes -->
                 <div class="flex flex-wrap gap-1 mt-2 justify-center text-xs">
-                  <label class="flex items-center space-x-2">
+                  <label class="flex items-center">
                     <input
                       type="checkbox"
                       v-model="searchFilters.title"
@@ -4909,7 +4909,7 @@
                     />
                     <span class="px-2 font-bold">العنوان</span>
                   </label>
-                  <label class="flex items-center space-x-2">
+                  <label class="flex items-center">
                     <input
                       type="checkbox"
                       v-model="searchFilters.number"
@@ -4918,7 +4918,7 @@
                     />
                     <span class="px-2 font-bold">الرقم</span>
                   </label>
-                  <label class="flex items-center space-x-2">
+                  <label class="flex items-center">
                     <input
                       type="checkbox"
                       v-model="searchFilters.story"
@@ -4927,7 +4927,7 @@
                     />
                     <span class="px-2 font-bold">القصة</span>
                   </label>
-                  <label class="flex items-center space-x-2">
+                  <label class="flex items-center">
                     <input
                       type="checkbox"
                       v-model="searchFilters.summary"
