--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -726,7 +726,7 @@
                 <fieldset class="border border-gray-300 rounded p-2 w-1/2">
                     <legend class="px-2 font-bold text-white-600">{{ episodeTypeLegend }}
                         <button 
-                            class="bg-orange-500 text-white font-bold py-2 px-1 rounded hover:bg-orange-800 transition" 
+                            class="bg-orange-500 text-white font-bold py-2 px-1 rounded hover:bg-orange-800 transition text-sm" 
                             @click="openEmptyPopup">
                             المزيد
                         </button>
@@ -4907,7 +4907,7 @@
                       class="scale-100"
                       @change="ensureOneChecked('title')"
                     />
-                    <span class="px-2 font-bold">العنوان</span>
+                    <span class="px-1 font-bold">العنوان</span>
                   </label>
                   <label class="flex items-center">
                     <input
@@ -4916,7 +4916,7 @@
                       class="scale-100"
                       @change="ensureOneChecked('number')"
                     />
-                    <span class="px-2 font-bold">الرقم</span>
+                    <span class="px-1 font-bold">الرقم</span>
                   </label>
                   <label class="flex items-center">
                     <input
@@ -4925,7 +4925,7 @@
                       class="scale-100"
                       @change="ensureOneChecked('story')"
                     />
-                    <span class="px-2 font-bold">القصة</span>
+                    <span class="px-1 font-bold">القصة</span>
                   </label>
                   <label class="flex items-center">
                     <input
@@ -4934,7 +4934,7 @@
                       class="scale-100"
                       @change="ensureOneChecked('summary')"
                     />
-                    <span class="px-2 font-bold">الملخص</span>
+                    <span class="px-1 font-bold">الملخص</span>
                   </label>
                 </div>
               </fieldset>
