--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -763,7 +763,7 @@
                 <div class="relative bg-sky-900 rounded shadow-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[90vh] overflow-hidden flex flex-col"> <!-- the defualt is 80vh in max-h-[90vh]-->
                     <!-- Sticky Header Section -->
                     <div class="sticky top-0 z-50 bg-sky-900 p-4">
-                        <h2 class="text-xl font-bold text-orange-400 relative">
+                        <h2 class="text-lg font-bold text-orange-400 relative">
                             <!-- Close Button in the Top Left of the Title -->
                             <button 
                                 @click="closeEmptyPopup" 
@@ -771,7 +771,7 @@
                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png" alt="Close" class="h-8 w-8"/>
                             </button>
                             تصفية موسعة 
-                            <span class="text-red-500 font-bold text-xl">({{ totalEpisodes }})</span>
+                            <span class="text-red-500 font-bold text-lg">({{ totalEpisodes }})</span>
                     
                             <!-- Reset Button (Refresh Icon with Image) -->
                             <button 
