--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4899,39 +4899,39 @@
                 </div>
               
                 <!-- Centered Checkboxes -->
-                <div class="flex flex-wrap mt-2 justify-center">
-                  <label class="flex items-center space-x-2">
+                <div class="flex flex-wrap mt-2 justify-center text-base">
+                  <label class="flex items-center">
                     <input
                       type="checkbox"
                       v-model="searchFilters.title"
-                      class="scale-150"
+                      class="scale-100"
                       @change="ensureOneChecked('title')"
                     />
                     <span class="px-2 font-bold">العنوان</span>
                   </label>
-                  <label class="flex items-center space-x-2">
+                  <label class="flex items-center">
                     <input
                       type="checkbox"
                       v-model="searchFilters.number"
-                      class="scale-150"
+                      class="scale-100"
                       @change="ensureOneChecked('number')"
                     />
                     <span class="px-2 font-bold">الرقم</span>
                   </label>
-                  <label class="flex items-center space-x-2">
+                  <label class="flex items-center">
                     <input
                       type="checkbox"
                       v-model="searchFilters.story"
-                      class="scale-150"
+                      class="scale-100"
                       @change="ensureOneChecked('story')"
                     />
                     <span class="px-2 font-bold">القصة</span>
                   </label>
-                  <label class="flex items-center space-x-2">
+                  <label class="flex items-center">
                     <input
                       type="checkbox"
                       v-model="searchFilters.summary"
-                      class="scale-150"
+                      class="scale-100"
                       @change="ensureOneChecked('summary')"
                     />
                     <span class="px-2 font-bold">الملخص</span>
