--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4899,7 +4899,7 @@
                 </div>
               
                 <!-- Centered Checkboxes -->
-                <div class="flex flex-wrap mt-2 justify-center text-base">
+                <div class="flex flex-wrap mt-2 justify-center text-lg">
                   <label class="flex items-center">
                     <input
                       type="checkbox"
