--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4954,8 +4954,8 @@
 
             <!-- Announcement Box -->
             <div class="relative w-full max-w-2xl p-4 mt-4 bg-black bg-opacity-85 rounded-lg shadow-lg border border-yellow-500 animate-borderMove">
-                <!-- <p class="text-white text-xl text-center font-bold">حلقة الأسبوع الماضي ({{ ep }})</p> -->
-                <p class="text-white text-xl text-center font-bold">حلقة ({{ ep }})</p>
+                <p class="text-white text-xl text-center font-bold">حلقة الأسبوع ({{ ep }})</p>
+                <!-- <p class="text-white text-xl text-center font-bold">حلقة ({{ ep }})</p> -->
                 <button 
                     v-if="episodes && episodes.length > 0"
                     @click="openEpisodeModal(ep)"
@@ -5645,8 +5645,8 @@
                         summary: false,
                     },
                     errorMessage: "",
-                    ep: 1157,
-                    mangaCh: 1141,
+                    ep: 1158,
+                    mangaCh: 1142,
                     replacementDict: {
                     "فلم": ["فيلم",],
                     "ة": ["ه","ة"],
